Sat Sep 29 12:28:08 2007  Tanaka Akira  <akr@fsij.org>

	* bootstraptest/runner.rb (assert_normal_exit): new method.

	* bootstraptest/test_knownbug.rb: add test for Marshal.load.

Sat Sep 29 10:12:20 2007  Tanaka Akira  <akr@fsij.org>

	* variable.c (rb_ivar_set): fix class instance variable.

	* object.c (rb_class_real): cl argument may be 0.

Sat Sep 29 09:12:02 2007  Tanaka Akira  <akr@fsij.org>

	* object.c (rb_class_real): use BUILTIN_TYPE instead of TYPE.
	  access flags directly intead of FL_TEST.
	  they are enough because cl argument is a class.

Sat Sep 29 08:57:15 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/win32.h (strcasecmp): needed for type_strcasehash.

Sat Sep 29 06:47:29 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (struct cmdline_options): static variables packed.

Sat Sep 29 05:29:30 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_fdopen): create IO object from fd.

	* parse.y (yycompile): use encoding of the source as default.

	* ruby.c (proc_options, load_file): ditto.

Sat Sep 29 04:27:08 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* encoding.c (rb_enc_alias): allow encodings multiple aliases.

	* encoding.c (rb_enc_find_index): search the encoding which has the
	  given name and return its index if found, or -1.

	* st.c (type_strcasehash): case-insensitive string hash type.

	* string.c (rb_str_force_encoding): force encoding of self.  this name
	  comes from [ruby-dev:31894] by Martin Duerst.  [ruby-dev:31744]

	* include/ruby/encoding.h (rb_enc_find_index, rb_enc_associate_index):
	  prototyped.

	* include/ruby/encoding.h (rb_enc_isctype): direct interface to ctype.

	* include/ruby/st.h (st_init_strcasetable): prototyped.

Sat Sep 29 03:53:26 2007  Koichi Sasada  <ko1@atdot.net>

	* cont.c: Thread local storage should be fiber local.

	* bootstraptest/test_knownbug.rb, test/ruby/test_fiber.rb: 
	  move a fixed test.

Fri Sep 28 23:15:31 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>
